# bcd

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  pyproject.toml  seed.yaml  tsconfig.json  tsconfig.server.json  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
data/sample_decisions/: eval_cases.json  jordan_seed_history.json  maya_seed_history.json  seed_history.json
data/sample_profiles/: alex_chen.json  jordan_lee.json  maya_patel.json
demo/: __init__.py
demo/cli/: __init__.py  main.py
docs/: architecture.md  data_model.md  evaluation.md  roadmap.md
docs/media/: README.md
docs/releases/: v0.1.0.md
scripts/: dev.mjs  evaluate_baseline.py  init_sample_data.py  profile-import-synthetic-eval.mjs  run_demo.py  smoke-e2e.mjs
src/bcd/: __init__.py  config.py  showcase.py
src/client/: App.tsx  api.ts  styles.css
src/server/: codex.test.ts  codex.ts  index.test.ts  index.ts  markdown.ts  prediction-gate.test.ts  prediction-gate.ts  prompts.test.ts  prompts.ts  storage.test.ts  storage.ts  validators.test.ts  validators.ts
src/shared/: types.ts
tests/: conftest.py
tests/fixtures/: chatgpt_conversations.json
tests/integration/: test_api.py  test_evaluation.py
tests/unit/: test_chatgpt_import.py  test_llm_mode.py  test_memory_retrieval.py  test_prediction.py  test_profile_bootstrap.py  test_profile_card.py  test_profile_onboarding.py  test_profile_signals.py  test_recent_state_notes.py  (+3 more)
(+32 files in other folders)
