[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "bcd"
version = "0.1.0"
description = "An open-source personalized decision prediction agent."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
  { name = "bcd contributors" }
]
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.28.0,<1.0.0",
  "pydantic>=2.7.0,<3.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "sqlmodel>=0.0.24,<0.1.0",
  "typer>=0.12.3,<1.0.0",
  "uvicorn>=0.34.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
]

[project.scripts]
bcd-cli = "demo.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/bcd", "demo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
